# hyprland_kb_switcher

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy-check.yml
python/: init_kb_switcher.py  kb_switcher.py
rust/kb_switcher/: README.md
rust/kb_switcher/src/: kb_switcher.rs  main.rs
src/: kb_switcher.rs  main.rs
src/kb_switcher/: data.rs
