[package]
name = "kb_switcher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.1"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.36.0"
